<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_purple"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    tools:ignore="ContentDescription" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/buttonSetStart"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_toStartOf="@+id/buttonSetStart">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:gravity="center_vertical"
                    android:text="@string/text_start_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMyStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_start_at"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonSetStart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/button_circle_background_01_selector"
                android:padding="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_morning"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/buttonSetEnd"
                android:layout_toLeftOf="@+id/buttonSetEnd"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:gravity="center_vertical"
                    android:text="@string/text_end_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMyEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_end_at"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonSetEnd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/button_circle_background_01_selector"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_night"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>