<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textViewRateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/text_rate_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_rate_content"
                android:textColor="@android:color/white" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/simpleRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:srb_clearRatingEnabled="true"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_star_empty"
                app:srb_drawableFilled="@drawable/ic_star_filled"
                app:srb_isIndicator="false"
                app:srb_minimumStars="1"
                app:srb_numStars="5"
                app:srb_rating="5"
                app:srb_scrollable="true"
                app:srb_starHeight="30dp"
                app:srb_starPadding="15dp"
                app:srb_starWidth="30dp"
                app:srb_stepSize="1" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButtonRateClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="7dp"
            android:background="@drawable/button_background_04_selector"
            android:padding="10dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_close" />

        <Button
            android:id="@+id/buttonRate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/container"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background_03_selector"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_lets_rate"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>